src/namespaces/registry/deployments/registry.yml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    app: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          resources:
            requests:
              memory: '100Mi'
              cpu: '250m'
            limits:
              memory: '200Mi'
              cpu: '500m'
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: repo-vol
              mountPath: '/var/lib/registry'
            - name: certs-vol
              mountPath: '/certs'
              readOnly: true
            - name: auth-vol
              mountPath: '/auth'
              readOnly: true
      volumes:
        - name: repo-vol
          hostPath:
            # directory location on host
            path: /mnt/registry
            # this field is optional
            type: Directory
        - name: certs-vol
          secret:
            secretName: registry-tls-secret
        - name: auth-vol
          secret:
            secretName: auth-secret
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: registry
spec:
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
  annotations:
    cert-manager.io/cluster-issuer: 'lets-encrypt'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  tls:
    - hosts:
        - registry.deevscale.com
      secretName: registry-tls-secret
  rules:
    - host: registry.deevscale.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
